[tool.poetry]
name = "gemini-chainlit"
version = "0.1.0"
description = ""
authors = ["a-zuev-pc <azuev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.402"
openai = "^1.41.0"
langchain = "^0.2.14"
pyyaml = "^6.0.2"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.22"
git-filter-repo = "^2.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
